[package]
name = "Planer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = { version = "0.10.0", features = ["advanced"] }
chrono = "0.4.30"
serde = { version = "1.0.188", features = ["derive"] }
serde_yaml = "0.9.25"
dirs = "5.0.1"
iced_core = "0.10.0"